# evo-crm

./: .env.example  .env.swarm.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  bsuid.html  deploy-db.js  deploy-image.js  deploy-local-build.js  deploy-nexus.js  docker-compose-vps.yaml  docker-compose.flow.yaml  docker-compose.prod-test.yaml  docker-compose.swarm.yaml  docker-compose.yml  package.json  setup.sh
evo-ai-processor-community/: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXTENSION_POINTS.md  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  alembic.ini  docker-compose.yml  docker_build.sh  pyproject.toml  requirements.txt  setup.py
evo-ai-processor-community/.github/workflows/: docker-publish.yml
evo-ai-processor-community/migrations/: env.py
evo-ai-processor-community/migrations/versions/: 26a14ac7025d_.py
evo-ai-processor-community/scripts/: run_seeders.py
evo-ai-processor-community/src/: __init__.py  main.py
evo-ai-processor-community/src/api/: a2a_routes.py  asana_routes.py  atlassian_routes.py  canva_routes.py  chat_routes.py  client_routes.py  custom_mcp_servers_routes.py  dependencies.py  github_routes.py  google_calendar_routes.py  google_sheets_routes.py  hubspot_routes.py  integrations_routes.py  linear_routes.py  mcp_integration_base.py  monday_routes.py  notion_routes.py  paypal_routes.py  session_routes.py  supabase_routes.py  system_routes.py  tools_routes.py
evo-ai-processor-community/src/config/: __init__.py  available_tools.json  database.py  redis.py  settings.py
evo-ai-processor-community/src/core/: error_codes.py  exception_handlers.py  exceptions.py
evo-ai-processor-community/src/evo_extension_points/: __init__.py  registry.py  (+3 more)
evo-nexus/: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV-SETUP.md  Dockerfile  Dockerfile.dashboard  Dockerfile.dev  Dockerfile.swarm  Dockerfile.swarm.dashboard  LICENSE  Makefile  NOTICE  NOTICE.md  README.md  README.swarm.md  ROADMAP.md  ROUTINES.md  SECURITY.md  TRADEMARKS.md  backup.py  docker-compose.dev.yml  docker-compose.hub.yml  docker-compose.proxy.yml  docker-compose.yml  entrypoint.sh  evonexus.stack.yml  install-service.sh  pyproject.toml  scheduler.py  setup.py  start-dashboard.sh  start-services.sh
evo-nexus/.handoffs/: domain-auth.md  domain-watcher.md  phase-0-handoff.md  phase-1-backend-handoff.md  phase-2-routes-handoff.md  phase-3-frontend-handoff.md  phase-4-cli-handoff.md  phase-9-final-audit.md
evo-nexus/ADWs/: runner.py
evo-nexus/cli/: README.md  package.json
evo-nexus/config/: heartbeats.example.yaml  providers.example.json  smart-router.example.json
evo-nexus/docs/: analise-e-integracao-evo-crm.md  architecture.md  getting-started.md  goals.md  heartbeats.md  introduction.md  knowledge-database.md  llms-full.txt  plugin-contract.md  tickets.md
evo-nexus/scripts/: clean-history.sh  link_workspace_projects.py  suggest_retro_tickets.py
evo-nexus/site/: .gitignore  Dockerfile  docker-compose.yml  index.html  package.json  tsconfig.json  vite.config.ts
evo-nexus/social-auth/: app.py  env_manager.py
(+3878 files in other folders)
