[project]
name = "evo-nexus"
version = "0.33.0"
description = "Unofficial open source toolkit for Claude Code — AI-powered business operating system"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "schedule>=1.2",
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-sqlalchemy>=3.1",
    "flask-login>=0.6",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "flask-sock>=0.7",
    "boto3>=1.35",
    "pywinpty>=3.0.3; sys_platform == 'win32'",
    "cryptography>=42",
    "psycopg2-binary",
    "alembic>=1.13",
    "tiktoken>=0.7",
    "sentence-transformers>=3.0",
    "openai>=1.0",
    "google-genai>=0.3",
    "anthropic>=0.25",
    "marker-pdf>=1.6.1",
    "watchdog>=4.0",
    "sqlparse>=0.4,<1.0",
    "jsonschema>=4.21",
    "flask-limiter>=3.5",
]

[project.scripts]
evonexus = "dashboard.backend.knowledge.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
]
